--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <div class="container">
         <h1>Color Palette Generator</h1>
         <br>
-        <label for="number">Number of Palette</label>
+        <label for="number">Number of Palette :-</label>
         <input type="number" id="num" placeholder="enetr no of Palatte">
 
-        <label for="Color format">Color Format</label>
+        <label for="Color format">Color Format :- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
         <select id="format">
             <option value="HEX">HEX</option>
             <option value="RGB">RGB</option>
