--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Color Palette Generator</h1>
         <br>
         <label for="number">Number of Palette :-</label>
-        <input type="number" id="num" placeholder="enetr no of Palatte">
+        <input type="number" id="num" placeholder="enetr no of Palatte"><br>
 
         <label for="Color format">Color Format :- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</label>
         <select id="format">
